# serializer version: 1
# name: test_sensor_platform[sensor.ab12cde_additional_rate_of_tax_end_date-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ab12cde_additional_rate_of_tax_end_date',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Additional rate of tax end date',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.DATE: 'date'>,
    'original_icon': None,
    'original_name': 'Additional rate of tax end date',
    'platform': 'dvla',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'additional_rate_of_tax_end_date',
    'unique_id': 'AB12CDE-artEndDate',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_additional_rate_of_tax_end_date-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'date',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'AB12CDE Additional rate of tax end date',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ab12cde_additional_rate_of_tax_end_date',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_co2_emissions-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ab12cde_co2_emissions',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'CO2 emissions',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'CO2 emissions',
    'platform': 'dvla',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'co2_emissions',
    'unique_id': 'AB12CDE-co2Emissions',
    'unit_of_measurement': 'g/km',
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_co2_emissions-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'AB12CDE CO2 emissions',
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'g/km',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ab12cde_co2_emissions',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '150',
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_color-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ab12cde_color',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Color',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Color',
    'platform': 'dvla',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'color',
    'unique_id': 'AB12CDE-colour',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_color-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'AB12CDE Color',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ab12cde_color',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_date_of_last_v5c_issued-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ab12cde_date_of_last_v5c_issued',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Date of last V5C issued',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.DATE: 'date'>,
    'original_icon': None,
    'original_name': 'Date of last V5C issued',
    'platform': 'dvla',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'date_of_last_v5c_issued',
    'unique_id': 'AB12CDE-dateOfLastV5CIssued',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_date_of_last_v5c_issued-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'date',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'AB12CDE Date of last V5C issued',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ab12cde_date_of_last_v5c_issued',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_engine_capacity-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ab12cde_engine_capacity',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Engine capacity',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Engine capacity',
    'platform': 'dvla',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'engine_capacity',
    'unique_id': 'AB12CDE-engineCapacity',
    'unit_of_measurement': 'cc',
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_engine_capacity-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'AB12CDE Engine capacity',
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: 'cc',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ab12cde_engine_capacity',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1998',
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_euro_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ab12cde_euro_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Euro status',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Euro status',
    'platform': 'dvla',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'euro_status',
    'unique_id': 'AB12CDE-euroStatus',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_euro_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'AB12CDE Euro status',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ab12cde_euro_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_first_registration_month-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ab12cde_first_registration_month',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'First registration month',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'First registration month',
    'platform': 'dvla',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'month_of_first_registration',
    'unique_id': 'AB12CDE-monthOfFirstRegistration',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_first_registration_month-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'AB12CDE First registration month',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ab12cde_first_registration_month',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2024-05',
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_fuel_type-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ab12cde_fuel_type',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Fuel type',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Fuel type',
    'platform': 'dvla',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'fuel_type',
    'unique_id': 'AB12CDE-fuelType',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_fuel_type-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'AB12CDE Fuel type',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ab12cde_fuel_type',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_mot_expiry_date-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ab12cde_mot_expiry_date',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'MOT expiry date',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.DATE: 'date'>,
    'original_icon': None,
    'original_name': 'MOT expiry date',
    'platform': 'dvla',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'mot_expiry_date',
    'unique_id': 'AB12CDE-motExpiryDate',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_mot_expiry_date-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'date',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'AB12CDE MOT expiry date',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ab12cde_mot_expiry_date',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2026-11-30',
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_mot_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'no_details_held_by_dvla',
        'no_results_returned',
        'not_valid',
        'valid',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ab12cde_mot_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'MOT status',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'MOT status',
    'platform': 'dvla',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'mot_status',
    'unique_id': 'AB12CDE-motStatus',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_mot_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'AB12CDE MOT status',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'no_details_held_by_dvla',
        'no_results_returned',
        'not_valid',
        'valid',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ab12cde_mot_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'valid',
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_real_driving_emissions-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ab12cde_real_driving_emissions',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Real driving emissions',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Real driving emissions',
    'platform': 'dvla',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'real_driving_emissions',
    'unique_id': 'AB12CDE-realDrivingEmissions',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_real_driving_emissions-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'AB12CDE Real driving emissions',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ab12cde_real_driving_emissions',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_revenue_weight-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ab12cde_revenue_weight',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Revenue weight',
    'options': dict({
      'sensor': dict({
        'suggested_display_precision': 2,
      }),
    }),
    'original_device_class': <SensorDeviceClass.WEIGHT: 'weight'>,
    'original_icon': None,
    'original_name': 'Revenue weight',
    'platform': 'dvla',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'revenue_weight',
    'unique_id': 'AB12CDE-revenueWeight',
    'unit_of_measurement': <UnitOfMass.KILOGRAMS: 'kg'>,
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_revenue_weight-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'weight',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'AB12CDE Revenue weight',
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfMass.KILOGRAMS: 'kg'>,
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ab12cde_revenue_weight',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_tax_due_date-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ab12cde_tax_due_date',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Tax due date',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.DATE: 'date'>,
    'original_icon': None,
    'original_name': 'Tax due date',
    'platform': 'dvla',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'tax_due_date',
    'unique_id': 'AB12CDE-taxDueDate',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_tax_due_date-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'date',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'AB12CDE Tax due date',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ab12cde_tax_due_date',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2026-03-01',
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_tax_status-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'not_taxed_for_on_road_use',
        'sorn',
        'taxed',
        'untaxed',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ab12cde_tax_status',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Tax status',
    'options': dict({
    }),
    'original_device_class': <SensorDeviceClass.ENUM: 'enum'>,
    'original_icon': None,
    'original_name': 'Tax status',
    'platform': 'dvla',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'tax_status',
    'unique_id': 'AB12CDE-taxStatus',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_tax_status-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'enum',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'AB12CDE Tax status',
      <SensorEntityCapabilityAttribute.OPTIONS: 'options'>: list([
        'not_taxed_for_on_road_use',
        'sorn',
        'taxed',
        'untaxed',
      ]),
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ab12cde_tax_status',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'taxed',
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_type_approval-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ab12cde_type_approval',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Type approval',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Type approval',
    'platform': 'dvla',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'type_approval',
    'unique_id': 'AB12CDE-typeApproval',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_type_approval-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'AB12CDE Type approval',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ab12cde_type_approval',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_wheelplan-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ab12cde_wheelplan',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Wheelplan',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Wheelplan',
    'platform': 'dvla',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'wheelplan',
    'unique_id': 'AB12CDE-wheelplan',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_wheelplan-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'AB12CDE Wheelplan',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ab12cde_wheelplan',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_year_of_manufacture-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'sensor',
    'entity_category': None,
    'entity_id': 'sensor.ab12cde_year_of_manufacture',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Year of manufacture',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Year of manufacture',
    'platform': 'dvla',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'year_of_manufacture',
    'unique_id': 'AB12CDE-yearOfManufacture',
    'unit_of_measurement': None,
  })
# ---
# name: test_sensor_platform[sensor.ab12cde_year_of_manufacture-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'AB12CDE Year of manufacture',
    }),
    'context': <ANY>,
    'entity_id': 'sensor.ab12cde_year_of_manufacture',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2020',
  })
# ---
